<!--
  ~ This file is part of
  ~ ExtraHardMode Server Plugin for Minecraft
  ~
  ~ Copyright (C) 2012 Ryan Hamshire
  ~ Copyright (C) 2013 Diemex
  ~
  ~ ExtraHardMode is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ExtraHardMode is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero Public License
  ~ along with ExtraHardMode.  If not, see <http://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Project properties. -->
    <groupId>com.extrahardmode</groupId>
    <artifactId>ExtraHardMode</artifactId>
    <version>3.15.1-beta</version>
    <name>ExtraHardMode</name>
    <description>New game rules and mechanics for Minecraft.</description>
    <url>https://dev.bukkit.org/projects/fun-hard-mode</url>

    <!-- Properties -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.mainclass>com.extrahardmode.ExtraHardMode</project.mainclass>
        <!-- Use a profile to overwrite this-->
        <outputdir>${project.build.outputDirectory}</outputdir>
        <mc-version>1.21.1</mc-version>
        <bukkit-ver>R0.1-SNAPSHOT</bukkit-ver>
    </properties>

    <!-- Build instructions -->
    <build>
        <finalName>${project.name}</finalName>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>

            <!-- Shade Metrics -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <minimizeJar>true</minimizeJar>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <artifactSet>
                        <includes>
                            <include>org.bstats:bstats-bukkit</include>
                            <include>org.bstats:bstats-base</include>
                            <include>org.apache.commons</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>com.extrahardmode.libs.org.bstats</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.commons</pattern>
                            <shadedPattern>com.extrahardmode.libs.org.apache.commons</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- append git commit hash to version-->
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>4.0.5</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens
                        java.base/java.util=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- Repositories -->
    <repositories>
        <!-- PlaceholderAPI Repo -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <!-- CoreProtect Repo -->
        <repository>
            <id>playpro-repo</id>
            <url>https://maven.playpro.com</url>
        </repository>
        <!-- WorldGuard Repo -->
        <repository>
            <id>enginehub-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <!-- LogBlock Repo -->
        <repository>
            <id>iani-repo</id>
            <url>https://www.iani.de/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <!-- Dependencies -->
    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.17.0</version>
        </dependency>

        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${mc-version}-${bukkit-ver}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Unit testing dependencies -->
        <!-- JUnit: Assertions and test framework -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Mock bukkit's interfaces -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.13.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.13.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Compatibility Dependencies -->
        <!-- WorldGuard -->
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.1.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- CoreProtect -->
        <dependency>
            <groupId>net.coreprotect</groupId>
            <artifactId>coreprotect</artifactId>
            <version>22.4</version>
            <scope>provided</scope>
        </dependency>
        <!-- LogBlock -->
        <dependency>
            <groupId>de.diddiz</groupId>
            <artifactId>logblock</artifactId>
            <version>1.20.0.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-base</artifactId>
            <version>3.0.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.3</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <!-- Developers -->
    <developers>
        <!-- Former Author -->
        <developer>
            <id>bigscary</id>
            <url>https://github.com/bigscary</url>
        </developer>
        <!-- Former Author -->
        <developer>
            <id>Diemex</id>
            <email>di.em.ex@gmx.de</email>
            <url>https://github.com/Di3mex</url>
            <timezone>GMT</timezone>
        </developer>
        <!-- Current Maintainer -->
        <developer>
            <id>RoboMWM</id>
            <url>https://github.com/RoboMWM</url>
        </developer>
        <!-- Contributor -->
        <developer>
            <id>Mitsugaru</id>
            <email>mitsugaru@gmail.com</email>
            <url>https://github.com/Mitsugaru</url>
            <timezone>-7</timezone>
        </developer>
        <developer>
            <id>bluekelp</id>
            <email>bukkit-dev@bluekelp.com</email>
            <url>https://github.com/bluekelp</url>
            <timezone>-7</timezone>
            <roles>
                <role>contributor</role>
            </roles>
        </developer>
    </developers>

</project>